--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d3d5539e",
+   "id": "d45feadd",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8a8b5599",
+   "id": "2285ac81",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "83294cdc",
+   "id": "3b0251a3",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4fd2116c",
+   "id": "61bbca80",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b80092e5",
+   "id": "f01d665a",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43476c0d",
+   "id": "7c07bce4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,10 +118,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0aa8fd95",
+   "id": "998fe134",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "1st name= input ('Enter a 1st name: ')\n",
+    "2nd name= input ('Enter a 2nd name: ')\n"
+   ]
   }
  ],
  "metadata": {
