--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -87,19 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "d86d9e09",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, Dima from Krakow 5 times!\n"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "word1 = input ('Enter Word #1: ')\n",
+    "word2 = input ('Enter Word #2: ')\n",
+    "if word1 < word2:\n",
+    "print (f'{word1} is firs word alphabetically')"
+   ]
   },
   {
    "cell_type": "code",
