--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "538fbd5d",
+   "id": "ce3cb558",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f8be89db",
+   "id": "c1cfdea2",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f19e3e20",
+   "id": "02cfa307",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d9751433",
+   "id": "e5977153",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2f21f2a4",
+   "id": "6c517266",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8b6925a2",
+   "id": "33617ba3",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2bdfd1a6",
+   "id": "fa3b2432",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "905f1a14",
+   "id": "e80c9403",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d50bd1cb",
+   "id": "31d6cf00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2dbccbf2",
+   "id": "86414c9f",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "520eaa26",
+   "id": "3b953006",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "aa044ffa",
+   "id": "5ab471b8",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7d22df83",
+   "id": "43474b8e",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "dfd75e30",
+   "id": "7d13e2a1",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5e2124c8",
+   "id": "003e84fb",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "be663b8f",
+   "id": "13ba7e68",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a67b9b27",
+   "id": "d7fd61ac",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "df22eb3a",
+   "id": "02bacb29",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9a7273f2",
+   "id": "12d14e91",
    "metadata": {},
    "outputs": [
     {
@@ -371,18 +371,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "470ba012",
+   "execution_count": 30,
+   "id": "77293d04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (3945594423.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[30], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    if name == 'Shraddha':\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "name = input('Enter your name: ')\n",
     " \n",
-    "    if name == 'Shraddha' \n",
+    "    if name == 'Shraddha': \n",
     "    print('Hello, Madam!')\n",
     "else:\n",
-    "    print(f'Hello, {name}. Who are you?\n",
-    "          ')"
+    "    print(f'Hello, {name}. Who are you?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f1ad954",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word1 = input()"
    ]
   }
  ],
