--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "22956dbc",
+   "id": "8c31907f",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aab06542",
+   "id": "d2ccd268",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ba9c3272",
+   "id": "2136b081",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c78cddcf",
+   "id": "ac1e7742",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "16de149e",
+   "id": "8ec85ecb",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "abbfe669",
+   "id": "e37c28dd",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9617bf6b",
+   "id": "e27e437f",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a60c1ef",
+   "id": "edc7555e",
    "metadata": {},
    "source": [
     "#Exercise Greet Yourself\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ba9b62c2",
+   "id": "cc498057",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "06d67695",
+   "id": "edbf285c",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "46eb70b4",
+   "id": "3d66024d",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d19bf6a9",
+   "id": "a007f759",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "c42d7728",
+   "id": "6c990908",
    "metadata": {},
    "outputs": [
     {
@@ -257,12 +257,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81bad8dc",
+   "id": "090ddda7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "word1 = input('Enter the w')"
+    "word1 = input('Enter the word1: ')\n",
+    "word2 = input('Enter the word2: ')\n",
+    "print(f '{x}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5fc4ab0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
