--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2eddb530",
+   "id": "54ff67f7",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5a0b1a8a",
+   "id": "c0877034",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b1db68c4",
+   "id": "3fb390e4",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "90e89f70",
+   "id": "49c6346f",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d14d5290",
+   "id": "4b25fd25",
    "metadata": {},
    "outputs": [
     {
@@ -147,14 +147,16 @@
    "source": [
     "word1=input('please enter random word: ')\n",
     "word2=input('please enter another word ')\n",
-    "\n",
+    "if word1 <= word2:\n",
+    "    print(f' Here is your entries order'word1)\n",
+    "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f45e22aa",
+   "id": "4f6540c6",
    "metadata": {},
    "outputs": [],
    "source": []
