--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f3d9027f",
+   "id": "d82fcfe5",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "49e91a92",
+   "id": "f7ecca5e",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb6a57c3",
+   "id": "bc8d10ca",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ac9cd31",
+   "id": "9c6a33e0",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5b0f9e20",
+   "id": "966a5772",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1af1a11e",
+   "id": "16b43c86",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "df3fcf4a",
+   "id": "fe296214",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eb2911d4",
+   "id": "50846924",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b59ae00b",
+   "id": "d20d420a",
    "metadata": {},
    "outputs": [
     {
@@ -149,16 +149,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "96452a55",
+   "execution_count": 8,
+   "id": "d6bc627e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (709789676.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[8], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    else\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "word1 = input('Enter first word')\n",
     "word2 = input('Enter second word')\n",
     "if word1 > word2:\n",
-    "    print(f')"
+    "    print(f'Word {word2} comes first')\n",
+    "    else\n",
+    "    print(f'Word {word1} comes first')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "982b2eda",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
