--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "aba1d425",
+   "id": "c14bb828",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f2ad9a93",
+   "id": "3edc3ade",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "78034e80",
+   "id": "fed5cc04",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d84346ab",
+   "id": "10290c48",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c42dc0e5",
+   "id": "eb363f5e",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fdc3845a",
+   "id": "fcc6fb1f",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0d6d10f0",
+   "id": "ba6f1016",
    "metadata": {},
    "outputs": [
     {
@@ -146,19 +146,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "58b15a8f",
+   "execution_count": 16,
+   "id": "33d52a81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the first word: bear\n",
+      "Enter the second word: apple\n",
+      "apple comes before bear.\n"
+     ]
+    }
+   ],
    "source": [
     "word1 = input(\"Enter the first word: \")\n",
     "word2 = input(\"Enter the second word: \")\n",
     "\n",
-    "if word1 > word2:\n",
+    "if word1 < word2:\n",
     "    print(f\"{word1} comes before {word2}.\")\n",
-    "else\n",
-    "    print(f\"{word2} comes before )"
+    "else:\n",
+    "    print(f\"{word2} comes before {word1}.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a62c4590",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
