--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "261f34cb",
+   "id": "c387d477",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "52777e83",
+   "id": "79290630",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a3441792",
+   "id": "2f978d78",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b11bc761",
+   "id": "70000060",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "301b7033",
+   "id": "97a5f152",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bf2d7e8d",
+   "id": "b17f7b0a",
    "metadata": {},
    "outputs": [
     {
@@ -110,15 +110,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d249d7d",
+   "id": "46ddebc8",
    "metadata": {},
    "outputs": [],
    "source": [
     "name1 = input(\"Enter first word : \")\n",
     "name2 = input(\"Enter second word : \")\n",
     "if name1 < name2 :\n",
-    "    print(f\"Word {name1} goes before {name2}\"\")\n",
-    "          else:"
+    "    print(f\"Word {name1} goes before {name2}\")\n",
+    "elif name1 > name2 :\n",
+    "   print(f\"Word {name2} goes before {name1}\")\n",
+    "else :\n",
+    "        "
    ]
   }
  ],
