--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2ebee699",
+   "id": "df970606",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "079be811",
+   "id": "f04b6800",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "48782c8b",
+   "id": "3600c611",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9af846c4",
+   "id": "3dbd108f",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d3ef9e03",
+   "id": "7744694b",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b547a44c",
+   "id": "b293c2a3",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fdb8041e",
+   "id": "0d6dbfc2",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5efd78ef",
+   "id": "5d0a8f09",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cf2ba3d6",
+   "id": "77fa3202",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "06381d4a",
+   "id": "7e67c596",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3ffa6e51",
+   "id": "3ece5da2",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4dea24b1",
+   "id": "c1e3d1fd",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1459b38f",
+   "id": "9080346f",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "26c28121",
+   "id": "a529ee08",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9ef22c75",
+   "id": "7d2ca73a",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "1abe8f22",
+   "id": "93de780c",
    "metadata": {},
    "outputs": [
     {
@@ -310,23 +310,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ff47c72e",
+   "execution_count": 24,
+   "id": "1766b66a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a word: kot\n",
+      "Enter another word: pies\n",
+      "word2 comes first\n"
+     ]
+    }
+   ],
    "source": [
     "word1 = input('Enter a word: ')\n",
     "word2 = input('Enter another word: ')\n",
     "if word1>word2:\n",
-    "    print(word1 \"_comes first\")\n",
+    "    print(f'{word1} comes first')\n",
     "else:\n",
-    "    print(word2 \"_comes first\")"
+    "    print(f'word2 comes first')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44a77caa",
+   "id": "96897ee1",
    "metadata": {},
    "outputs": [],
    "source": []
