--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d45feadd",
+   "id": "cb5a7871",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2285ac81",
+   "id": "c3ccad38",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3b0251a3",
+   "id": "46c79b94",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "61bbca80",
+   "id": "17d90606",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f01d665a",
+   "id": "77e48fad",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c07bce4",
+   "id": "8c5bf780",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,14 +117,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "d1472487",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a 1st name: ahmed\n",
+      "Enter a 2nd name: younis\n",
+      "ahmed younis\n"
+     ]
+    }
+   ],
+   "source": [
+    "name1= input ('Enter a 1st name: ')\n",
+    "name2= input ('Enter a 2nd name: ')\n",
+    "print (name1 , name2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "998fe134",
+   "id": "bb878a14",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "1st name= input ('Enter a 1st name: ')\n",
-    "2nd name= input ('Enter a 2nd name: ')\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
