--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ce3cb558",
+   "id": "5885423b",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c1cfdea2",
+   "id": "4ba13327",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "02cfa307",
+   "id": "702e7d2b",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e5977153",
+   "id": "ffbdd00c",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6c517266",
+   "id": "945b0a7f",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "33617ba3",
+   "id": "05394b81",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fa3b2432",
+   "id": "2fcb8205",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e80c9403",
+   "id": "a362f180",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "31d6cf00",
+   "id": "3831aab4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "86414c9f",
+   "id": "aacd8a15",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b953006",
+   "id": "9000575d",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5ab471b8",
+   "id": "c9323083",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "43474b8e",
+   "id": "ae9bbd56",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7d13e2a1",
+   "id": "95ee04c1",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "003e84fb",
+   "id": "96f581d1",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "13ba7e68",
+   "id": "feb66ca1",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "d7fd61ac",
+   "id": "99c9678f",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "02bacb29",
+   "id": "fcbd8e36",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "12d14e91",
+   "id": "9fd4ee09",
    "metadata": {},
    "outputs": [
     {
@@ -371,23 +371,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "77293d04",
+   "execution_count": 31,
+   "id": "cd24510a",
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "unexpected indent (3945594423.py, line 3)",
+     "evalue": "unexpected indent (822993330.py, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[30], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    if name == 'Shraddha':\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[31], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    if name == 'Shraddha' :\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
    "source": [
     "name = input('Enter your name: ')\n",
     " \n",
-    "    if name == 'Shraddha': \n",
+    "    if name == 'Shraddha' : \n",
     "    print('Hello, Madam!')\n",
     "else:\n",
     "    print(f'Hello, {name}. Who are you?')"
@@ -396,11 +396,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f1ad954",
+   "id": "7c33240c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "word1 = input()"
+    "word1 = input('Enter first word: ')\n",
+    "word2 = input('Enter second word: ')\n",
+    "if word1 > word2 :\n",
+    "    print('first word comes first')\n",
+    "    else"
    ]
   }
  ],
