--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -87,21 +87,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d86d9e09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'if' statement on line 3 (487455565.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    print (f'{word1} is firs word alphabetically')\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'if' statement on line 3\n"
+     ]
+    }
+   ],
    "source": [
     "word1 = input ('Enter Word #1: ')\n",
     "word2 = input ('Enter Word #2: ')\n",
-    "if word1 < word2:\n",
-    "print (f'{word1} is firs word alphabetically')"
+    "if 'word1' < word2:\n",
+    "print (f'{word1} is firs word alphabetically')\n",
+    "else: print (f'{word2} is firs word alphabetically')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "62a90e07",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85ad7fd4",
    "metadata": {},
    "outputs": [],
    "source": []
