--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8c31907f",
+   "id": "83ae97f0",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d2ccd268",
+   "id": "af3d8fb1",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2136b081",
+   "id": "fa3260fb",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ac1e7742",
+   "id": "2c2ebcab",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8ec85ecb",
+   "id": "d42ea162",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e37c28dd",
+   "id": "04a64c22",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e27e437f",
+   "id": "cd5efa20",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edc7555e",
+   "id": "1cfdfe9d",
    "metadata": {},
    "source": [
     "#Exercise Greet Yourself\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "cc498057",
+   "id": "fa783d84",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "edbf285c",
+   "id": "e5779865",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "3d66024d",
+   "id": "53ff3037",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a007f759",
+   "id": "267f173f",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "6c990908",
+   "id": "fc10ddfa",
    "metadata": {},
    "outputs": [
     {
@@ -257,19 +257,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "090ddda7",
+   "id": "d160284c",
    "metadata": {},
    "outputs": [],
    "source": [
     "word1 = input('Enter the word1: ')\n",
     "word2 = input('Enter the word2: ')\n",
-    "print(f '{x}')"
+    "print(f '{x} < {y}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5fc4ab0",
+   "id": "a808f284",
    "metadata": {},
    "outputs": [],
    "source": []
