--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54ff67f7",
+   "id": "b788b9fe",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c0877034",
+   "id": "1ad256ce",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3fb390e4",
+   "id": "b08b6f68",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "49c6346f",
+   "id": "7a597bc6",
    "metadata": {},
    "outputs": [
     {
@@ -131,16 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "4b25fd25",
+   "execution_count": 21,
+   "id": "6add1888",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 1) (3712660915.py, line 1)",
+     "evalue": "unterminated string literal (detected at line 4) (2652779974.py, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[19], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    word1=input('please enter random word: )\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 1)\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[21], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f'Here is your entries order {word2} {word1}'')\u001b[0m\n\u001b[0m                                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 4)\n"
      ]
     }
    ],
@@ -148,7 +148,9 @@
     "word1=input('please enter random word: ')\n",
     "word2=input('please enter another word ')\n",
     "if word1 <= word2:\n",
-    "    print(f' Here is your entries order'word1)\n",
+    "    print(f'Here is your entries order {word2} {word1})\n",
+    "else:\n",
+    "    print(f' Here is your entries order {word1} {word2}'')\n",
     "    \n",
     "    "
    ]
@@ -156,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f6540c6",
+   "id": "200e8132",
    "metadata": {},
    "outputs": [],
    "source": []
