--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d82fcfe5",
+   "id": "9c6900d3",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f7ecca5e",
+   "id": "133a16b8",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc8d10ca",
+   "id": "de734e48",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c6a33e0",
+   "id": "e6118e93",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "966a5772",
+   "id": "2dcc8fbf",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "16b43c86",
+   "id": "e3251a4b",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fe296214",
+   "id": "915ef463",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "50846924",
+   "id": "00355d0f",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d20d420a",
+   "id": "febe863f",
    "metadata": {},
    "outputs": [
     {
@@ -149,16 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "d6bc627e",
+   "execution_count": 9,
+   "id": "0048bbd8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (709789676.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[8], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    else\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first wordalfa\n",
+      "Enter second wordcisco\n",
+      "Word alfa comes first\n"
      ]
     }
    ],
@@ -167,14 +168,41 @@
     "word2 = input('Enter second word')\n",
     "if word1 > word2:\n",
     "    print(f'Word {word2} comes first')\n",
-    "    else\n",
+    "else:\n",
+    "    print(f'Word {word1} comes first')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "463de76a",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first wordcisco\n",
+      "Enter second wordalfa\n",
+      "Word alfa comes first\n"
+     ]
+    }
+   ],
+   "source": [
+    "word1 = input('Enter first word')\n",
+    "word2 = input('Enter second word')\n",
+    "if word1 > word2:\n",
+    "    print(f'Word {word2} comes first')\n",
+    "else:\n",
     "    print(f'Word {word1} comes first')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "982b2eda",
+   "id": "590b371b",
    "metadata": {},
    "outputs": [],
    "source": []
