--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c387d477",
+   "id": "0ec3c6bb",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "79290630",
+   "id": "00bcd0b1",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2f978d78",
+   "id": "b0cff9d1",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70000060",
+   "id": "486723c0",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "97a5f152",
+   "id": "b486c0c7",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b17f7b0a",
+   "id": "f9cfa79b",
    "metadata": {},
    "outputs": [
     {
@@ -109,10 +109,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "46ddebc8",
+   "execution_count": 17,
+   "id": "af7f1e6a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first word : Pat\n",
+      "Enter second word : Pat\n",
+      "Word2 Pat and Pat are equal !!!\n"
+     ]
+    }
+   ],
    "source": [
     "name1 = input(\"Enter first word : \")\n",
     "name2 = input(\"Enter second word : \")\n",
@@ -121,8 +131,25 @@
     "elif name1 > name2 :\n",
     "   print(f\"Word {name2} goes before {name1}\")\n",
     "else :\n",
+    "       print(f\"Word {name1} and {name2} are equal !!!\")\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fbb5fa7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3621a84",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
