--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cb5a7871",
+   "id": "788f9b30",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c3ccad38",
+   "id": "07328eb4",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "46c79b94",
+   "id": "36d0d6f2",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "17d90606",
+   "id": "0c0ab173",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "77e48fad",
+   "id": "b15c0d56",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c5bf780",
+   "id": "b7813bce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,8 +117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "d1472487",
+   "execution_count": 21,
+   "id": "f54ac536",
    "metadata": {},
    "outputs": [
     {
@@ -126,21 +126,30 @@
      "output_type": "stream",
      "text": [
       "Enter a 1st name: ahmed\n",
-      "Enter a 2nd name: younis\n",
-      "ahmed younis\n"
+      "Enter a 2nd name: younis\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "name1= input ('Enter a 1st name: ')\n",
     "name2= input ('Enter a 2nd name: ')\n",
-    "print (name1 , name2)"
+    "name1==name2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb878a14",
+   "id": "5ca43a9a",
    "metadata": {},
    "outputs": [],
    "source": []
