--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "df970606",
+   "id": "e283e7a6",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f04b6800",
+   "id": "6687a2d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3600c611",
+   "id": "807437b8",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3dbd108f",
+   "id": "68b871ff",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7744694b",
+   "id": "38d3f69b",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b293c2a3",
+   "id": "370f157a",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0d6dbfc2",
+   "id": "32ae2ae8",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5d0a8f09",
+   "id": "d3e084a7",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "77fa3202",
+   "id": "29619683",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7e67c596",
+   "id": "c20d3545",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3ece5da2",
+   "id": "f0bacdd9",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c1e3d1fd",
+   "id": "8983546f",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9080346f",
+   "id": "0f710991",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a529ee08",
+   "id": "6bc26728",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7d2ca73a",
+   "id": "1f8ca5ca",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "93de780c",
+   "id": "2560a1c5",
    "metadata": {},
    "outputs": [
     {
@@ -310,8 +310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "1766b66a",
+   "execution_count": 25,
+   "id": "7ad45247",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
      "text": [
       "Enter a word: kot\n",
       "Enter another word: pies\n",
-      "word2 comes first\n"
+      "pies comes first\n"
      ]
     }
    ],
@@ -330,13 +330,13 @@
     "if word1>word2:\n",
     "    print(f'{word1} comes first')\n",
     "else:\n",
-    "    print(f'word2 comes first')"
+    "    print(f'{word2} comes first')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96897ee1",
+   "id": "b58eb6da",
    "metadata": {},
    "outputs": [],
    "source": []
