--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5885423b",
+   "id": "9dd4a429",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4ba13327",
+   "id": "4cf79d48",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "702e7d2b",
+   "id": "f1e1fe3d",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ffbdd00c",
+   "id": "ab5495ed",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "945b0a7f",
+   "id": "dd3381eb",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "05394b81",
+   "id": "93b9d4d6",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2fcb8205",
+   "id": "d921e67c",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a362f180",
+   "id": "ac22212a",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3831aab4",
+   "id": "82009c7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "aacd8a15",
+   "id": "2fa62839",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9000575d",
+   "id": "351ff7da",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c9323083",
+   "id": "c32a485a",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ae9bbd56",
+   "id": "6114e264",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "95ee04c1",
+   "id": "682be187",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "96f581d1",
+   "id": "be00ae9d",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "feb66ca1",
+   "id": "321c0433",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "99c9678f",
+   "id": "c3ff99bf",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "fcbd8e36",
+   "id": "aa78dc0f",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9fd4ee09",
+   "id": "a9675454",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "cd24510a",
+   "id": "02276dd8",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
    "source": [
     "name = input('Enter your name: ')\n",
     " \n",
-    "    if name == 'Shraddha' : \n",
+    "    if name == 'Shraddha': \n",
     "    print('Hello, Madam!')\n",
     "else:\n",
     "    print(f'Hello, {name}. Who are you?')"
@@ -395,17 +395,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7c33240c",
+   "execution_count": 33,
+   "id": "bb9eb2b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first word: banana\n",
+      "Enter second word: apple\n",
+      "first word comes first\n"
+     ]
+    }
+   ],
    "source": [
     "word1 = input('Enter first word: ')\n",
     "word2 = input('Enter second word: ')\n",
     "if word1 > word2 :\n",
     "    print('first word comes first')\n",
-    "    else"
+    "else:\n",
+    "    print('second word comes fisrt')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d06672d9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7ef23c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
