--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "83ae97f0",
+   "id": "0aacfb03",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "af3d8fb1",
+   "id": "26a33e92",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fa3260fb",
+   "id": "33762a2c",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2c2ebcab",
+   "id": "46c5094f",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d42ea162",
+   "id": "461e5f25",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "04a64c22",
+   "id": "a402372d",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cd5efa20",
+   "id": "defc283d",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cfdfe9d",
+   "id": "60803fcc",
    "metadata": {},
    "source": [
     "#Exercise Greet Yourself\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fa783d84",
+   "id": "ff291aef",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e5779865",
+   "id": "998efdc4",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "53ff3037",
+   "id": "849e0599",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "267f173f",
+   "id": "e9c06eeb",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "fc10ddfa",
+   "id": "75733df2",
    "metadata": {},
    "outputs": [
     {
@@ -257,19 +257,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d160284c",
+   "id": "d453c6b1",
    "metadata": {},
    "outputs": [],
    "source": [
     "word1 = input('Enter the word1: ')\n",
     "word2 = input('Enter the word2: ')\n",
+    "if 'word1' < 'word2'\n",
     "print(f '{x} < {y}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a808f284",
+   "id": "ab08598c",
    "metadata": {},
    "outputs": [],
    "source": []
