--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b788b9fe",
+   "id": "cf78599f",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1ad256ce",
+   "id": "23b7933f",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b08b6f68",
+   "id": "e3391b0a",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7a597bc6",
+   "id": "c2d4854d",
    "metadata": {},
    "outputs": [
     {
@@ -131,16 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "6add1888",
+   "execution_count": 24,
+   "id": "213beb0c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 4) (2652779974.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[21], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f'Here is your entries order {word2} {word1}'')\u001b[0m\n\u001b[0m                                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 4)\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter random word: book\n",
+      "please enter another word pin\n",
+      "Here is your entries orderpinbook\n"
      ]
     }
    ],
@@ -148,9 +149,9 @@
     "word1=input('please enter random word: ')\n",
     "word2=input('please enter another word ')\n",
     "if word1 <= word2:\n",
-    "    print(f'Here is your entries order {word2} {word1})\n",
+    "    print('Here is your entries order'+ word2 + word1)\n",
     "else:\n",
-    "    print(f' Here is your entries order {word1} {word2}'')\n",
+    "    print(' Here is your entries order ' + word1 + word2 )\n",
     "    \n",
     "    "
    ]
@@ -158,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "200e8132",
+   "id": "64d00f7a",
    "metadata": {},
    "outputs": [],
    "source": []
