--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9c6900d3",
+   "id": "f325bc93",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "133a16b8",
+   "id": "c016d803",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de734e48",
+   "id": "95aed1ae",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6118e93",
+   "id": "5aa2eb33",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2dcc8fbf",
+   "id": "282b7b61",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e3251a4b",
+   "id": "3960c8bc",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "915ef463",
+   "id": "5c8fa5d4",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "00355d0f",
+   "id": "4e22d3f2",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "febe863f",
+   "id": "ae25d85b",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0048bbd8",
+   "id": "43d0f807",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "463de76a",
+   "id": "19d06452",
    "metadata": {
     "scrolled": false
    },
@@ -200,9 +200,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "96984b9f",
+   "metadata": {},
+   "source": [
+    "#test"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "590b371b",
+   "id": "36f45e48",
    "metadata": {},
    "outputs": [],
    "source": []
