--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0ec3c6bb",
+   "id": "dd0034e4",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "00bcd0b1",
+   "id": "1e5bf13d",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b0cff9d1",
+   "id": "386350c0",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "486723c0",
+   "id": "91250342",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b486c0c7",
+   "id": "bdba3ccf",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f9cfa79b",
+   "id": "db4d6b57",
    "metadata": {},
    "outputs": [
     {
@@ -109,8 +109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "af7f1e6a",
+   "execution_count": 21,
+   "id": "6c834ffd",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
      "text": [
       "Enter first word : Pat\n",
       "Enter second word : Pat\n",
-      "Word2 Pat and Pat are equal !!!\n"
+      "Words Pat and Pat are the same !!!\n"
      ]
     }
    ],
@@ -131,14 +131,14 @@
     "elif name1 > name2 :\n",
     "   print(f\"Word {name2} goes before {name1}\")\n",
     "else :\n",
-    "       print(f\"Word {name1} and {name2} are equal !!!\")\n",
+    "       print(f\"Words {name1} and {name2} are the same !!!\")\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fbb5fa7",
+   "id": "cebe9ed5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3621a84",
+   "id": "148120b1",
    "metadata": {},
    "outputs": [],
    "source": []
