--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "788f9b30",
+   "id": "2920e3e8",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "07328eb4",
+   "id": "ff114fbf",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "36d0d6f2",
+   "id": "aef2b5d2",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0c0ab173",
+   "id": "da55675a",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b15c0d56",
+   "id": "07497115",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7813bce",
+   "id": "a9f19355",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f54ac536",
+   "id": "401b681a",
    "metadata": {},
    "outputs": [
     {
@@ -143,13 +143,13 @@
    "source": [
     "name1= input ('Enter a 1st name: ')\n",
     "name2= input ('Enter a 2nd name: ')\n",
-    "name1==name2"
+    "if name1 "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ca43a9a",
+   "id": "b52ea97f",
    "metadata": {},
    "outputs": [],
    "source": []
