--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf78599f",
+   "id": "d1c80e80",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "23b7933f",
+   "id": "fc3f42dc",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e3391b0a",
+   "id": "baf15cbd",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c2d4854d",
+   "id": "96b16fdf",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "213beb0c",
+   "id": "d0cceae6",
    "metadata": {},
    "outputs": [
     {
@@ -158,8 +158,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "id": "8631381d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 4) (2430639385.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[27], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f'Here is your entries order {word2} and {word1}'')\u001b[0m\n\u001b[0m                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "word1=input('please enter random word: ')\n",
+    "word2=input('please enter another word ')\n",
+    "if word1 <= word2:\n",
+    "    print(f'Here is your entries order {word2} and {word1}'')\n",
+    "else:\n",
+    "    print(' Here is your entries order ' + word1 + word2 )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "64d00f7a",
+   "id": "9eaf60b1",
    "metadata": {},
    "outputs": [],
    "source": []
