--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dd0034e4",
+   "id": "a09c7138",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1e5bf13d",
+   "id": "c5469b3a",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "386350c0",
+   "id": "5c55ce8a",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91250342",
+   "id": "1ab56277",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bdba3ccf",
+   "id": "29a64ae4",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "db4d6b57",
+   "id": "ef9c6977",
    "metadata": {},
    "outputs": [
     {
@@ -109,17 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "6c834ffd",
+   "execution_count": 24,
+   "id": "2862c175",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter first word : Pat\n",
-      "Enter second word : Pat\n",
-      "Words Pat and Pat are the same !!!\n"
+      "Enter first word : mat\n",
+      "Enter second word : mat\n",
+      "Words mat and mat are the same !!!\n"
      ]
     }
    ],
@@ -127,18 +127,17 @@
     "name1 = input(\"Enter first word : \")\n",
     "name2 = input(\"Enter second word : \")\n",
     "if name1 < name2 :\n",
-    "    print(f\"Word {name1} goes before {name2}\")\n",
+    "    print(f\"Word {name1} comes before {name2}\")\n",
     "elif name1 > name2 :\n",
-    "   print(f\"Word {name2} goes before {name1}\")\n",
+    "    print(f\"Word {name2} comes before {name1}\")\n",
     "else :\n",
-    "       print(f\"Words {name1} and {name2} are the same !!!\")\n",
-    "        "
+    "    print(f\"Words {name1} and {name2} are the same !!!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cebe9ed5",
+   "id": "1f96021f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -146,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "148120b1",
+   "id": "ca288fff",
    "metadata": {},
    "outputs": [],
    "source": []
