--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -261,10 +261,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "word1 = input('Enter the word1: ')\n",
-    "word2 = input('Enter the word2: ')\n",
-    "if 'word1' < 'word2'\n",
-    "print(f '{x} < {y}')"
+    "word_1 = input('Enter the word1: ')\n",
+    "word_2 = input('Enter the word2: ')\n",
+    "if 'word_1' < 'word_2':\n",
+    "print(f 'chicken comes before egg')"
    ]
   },
   {
