--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2920e3e8",
+   "id": "fff2fa7e",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ff114fbf",
+   "id": "43fed15b",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "aef2b5d2",
+   "id": "7830fd27",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "da55675a",
+   "id": "bb7bf82d",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "07497115",
+   "id": "c4c7daf6",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9f19355",
+   "id": "eef85f44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "401b681a",
+   "id": "bb8e087a",
    "metadata": {},
    "outputs": [
     {
@@ -143,13 +143,14 @@
    "source": [
     "name1= input ('Enter a 1st name: ')\n",
     "name2= input ('Enter a 2nd name: ')\n",
-    "if name1 "
+    "if name1 > name2:\n",
+    "    print (f'())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b52ea97f",
+   "id": "4345deab",
    "metadata": {},
    "outputs": [],
    "source": []
