--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "d86d9e09",
    "metadata": {},
    "outputs": [
@@ -95,9 +95,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter Word #1: apple\n",
-      "Enter Word #2: egg\n",
-      "apple is first word alphabetically\n"
+      "Enter Word #1: hubba\n",
+      "Enter Word #2: bubba\n",
+      "bubba is first word alphabetically\n",
+      "hubba is not hte first word alphabetically\n"
      ]
     }
    ],
@@ -106,8 +107,10 @@
     "word2 = input ('Enter Word #2: ')\n",
     "if word1 < word2:\n",
     "    print (f'{word1} is first word alphabetically')\n",
+    "    print (f'{word2} is not the first word alphabetically')\n",
+    "else: \n",
     "    print (f'{word2} is first word alphabetically')\n",
-    "else: print (f'{word2} is first word alphabetically')"
+    "    print (f'{word1} is not hte first word alphabetically')"
    ]
   },
   {
@@ -121,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "482b7ddc",
+   "id": "6d3cf91e",
    "metadata": {},
    "outputs": [],
    "source": []
