--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6ec5ccee",
+   "id": "e87a8ec5",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2a299b12",
+   "id": "2036831f",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "66991b46",
+   "id": "892004bc",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1b732498",
+   "id": "967c174d",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "62a519f3",
+   "id": "e75ccbb2",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "459a48d6",
+   "id": "580ace04",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d257020e",
+   "id": "8cbb61a1",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a01ed882",
+   "id": "5dfd51ba",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "94a8ffa3",
+   "id": "610387b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7246cf7d",
+   "id": "03b9e5d5",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dadfdad",
+   "id": "def58829",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2aa75efe",
+   "id": "0a5cfedd",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3bab8358",
+   "id": "3c3159b7",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7945737d",
+   "id": "eee3f435",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ea7d2482",
+   "id": "1415ac8d",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "3e64b6cb",
+   "id": "c1048ae9",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c9c47f18",
+   "id": "99786598",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f82d4457",
+   "id": "5ec3a3cd",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "18fcd19d",
+   "id": "2830193e",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "489e7362",
+   "id": "0684e515",
    "metadata": {},
    "outputs": [
     {
@@ -395,17 +395,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "af9e5d35",
+   "execution_count": 38,
+   "id": "4c8a0881",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter first word: banana\n",
-      "Enter second word: apple\n",
-      "first word comes first\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (3935930634.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[38], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    print( word1, 'comes before' word2)\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
      ]
     }
    ],
@@ -415,13 +414,13 @@
     "if word1 > word2 :\n",
     "    print('first word comes first')\n",
     "else:\n",
-    "    print('second word comes fisrt')"
+    "    print( word1, 'comes before', word2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7da2d245",
+   "id": "8a8e537d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -429,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c1ce544",
+   "id": "d45d96dd",
    "metadata": {},
    "outputs": [],
    "source": []
